= Changelog

== Version 2.0.0

[small]#Released at xx.xx.xxxx#

* https://github.com/svenkubiak/mangooio/issues/64[#64] Move to log4j2 for logging (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/53[#53] Extracted Mailer to own extension (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/66[#66] Removed all redundant legacy code  (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/45[#45] Removed all @deprecated methods and classes (svenkubiak)
* Added new ConfigUtils class for easy access to configuration values (svenkubiak)
* Updated Documentation (svenkubiak)
* Version bumps (svenkubiak)
** undertow-core 1.3.3.Final -> 1.3.4.Final
** fluent-hc 4.4.1 -> 4.5.1
** fluentlenium-core 0.10.3 -> 0.10.6 

== Version 1.3.1

[small]#Released at 25.10.2015#

* Fixed bug that displayed the wrong previous firing time on @scheduler page (svenkubiak)
* Fixed bug in table that displayed schedule job on @scheduler page (svenkubiak)

== Version 1.3.0

[small]#Released at 22.10.2015#

* https://github.com/svenkubiak/mangooio/issues/73[#73] Added Basic HTTP authentication for administrative URLs (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/72[#72] Added @scheduler administrative URL (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/71[#71] Added autostart option to scheduler (svenkubiak)
* Code cleanup, refactorings and more javadoc (svenkubiak)
* Updated Documentation (svenkubiak)
* Version bumps (svenkubiak)
** undertow 1.3.0.Final -> 1.3.3.Final
** bcprov-jdk15on 1.52 -> 1.53

== Version 1.2.0

[small]#Released at 17.10.2015#

* https://github.com/svenkubiak/mangooio/issues/33[#33] Added Cookie versioning (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/57[#57] Added OAuth to authentication (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/61[#61] Move Body to Request (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/58[#58] Added @metrics administrative URL (svenkubiak)