@@ -1,12 +1,15 @@
 package io.mangoo.cache;
 
 import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertNull;
+
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.ConcurrentMap;
 
 import org.junit.Before;
 import org.junit.Test;
 
-import io.mangoo.cache.Cache;
 import io.mangoo.test.MangooInstance;
 
 public class CacheTest {
@@ -41,10 +44,33 @@ public class CacheTest {
     	cache.add("test", TEST);
     	cache.add("test2", 1);
 
-    	String test = cache.get("test", String.class);
+    	String test = cache.get("test");
     	assertEquals(TEST, test);
 
-    	int foo = cache.get("test2", int.class);
+    	int foo = cache.get("test2");
     	assertEquals(1, foo);
+    }
+    
+    @Test
+    public void getAllTest() {
+        cache.add("test", TEST);
+        cache.add("test2", 1);
+        
+        ConcurrentMap<String, Object> map = cache.getAll();
+        assertNotNull(map);
+        assertEquals(2, map.size());
+    }
+    
+    @Test
+    public void putAllTest() {
+        ConcurrentMap<String, Object> concurrentMap = new ConcurrentHashMap<String, Object>();
+        concurrentMap.put("test", TEST);
+        concurrentMap.put("test2", 1);
+        
+        cache.addAll(concurrentMap);
+        
+        ConcurrentMap<String, Object> map = cache.getAll();
+        assertNotNull(map);
+        assertEquals(2, map.size());
     }
 }
